<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.profile_fragmen">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="201dp"
            android:src="@drawable/slider" />
        <TextView
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="15sp"
            android:text="@string/bait"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/abu2"/>
        <TextView
            android:text="@string/vimis"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Visi"/>
        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_visi"/>
        <TextView
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Misi"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/nomor"/>
            <TextView
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isi_misi"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>

</FrameLayout>