<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/isi"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".dashboardd"
    tools:showIn="@layout/app_bar_dashboardd">
    <FrameLayout
        android:id="@+id/screen_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ViewFlipper
        android:id="@+id/v_vlipper"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:src="@drawable/home"
            android:background="#ffff"
            android:scaleType="fitXY"/>
        <ImageButton
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffff"
            android:layout_height="60dp"
            android:src="@drawable/profile"
            android:scaleType="fitXY"/>
        <ImageButton
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffff"
            android:layout_height="60dp"
            android:src="@drawable/isi"
            android:scaleType="fitXY"/>
    </LinearLayout>
    <LinearLayout
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="25dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/home"/>
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/profil"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/isi"/>
    </LinearLayout>
    <!--bawah-->
    <LinearLayout
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center">
        <ImageButton
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffff"
            android:layout_height="60dp"
            android:src="@drawable/jadwal"
            android:scaleType="fitXY"/>
        <ImageButton
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:src="@drawable/nilai"
            android:background="#ffff"
            android:scaleType="fitXY"/>
        <ImageButton
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#ffff"
            android:layout_height="60dp"
            android:src="@drawable/umuman"
            android:scaleType="fitXY"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="#ffff"
            android:scaleType="fitXY"
            android:src="@drawable/deal" />


    </LinearLayout>
    <LinearLayout
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/jadwal"/>
        <TextView
            android:layout_marginLeft="25dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/nilai"/>
        <TextView
            android:layout_marginLeft="0dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/pengumuman"/>
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/daftar"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#95a5a6"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <TextView
            android:gravity="center"
            android:text="Alur Pendaftaran"
            android:textStyle="bold"
            android:textSize="19sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/point"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    </LinearLayout>
</ScrollView>


</LinearLayout>