<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.home_fragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--slider-->
            <RelativeLayout
                android:id="@+id/layout_top"
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.example.biem.alamien._sliders.SliderView
                        android:id="@+id/sliderView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </FrameLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_indicator"/>

                <LinearLayout
                    android:id="@+id/pagesContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"/>

            </RelativeLayout>
            <LinearLayout
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:weightSum="4"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/btn_home"
                    android:layout_marginLeft="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp"
                    android:src="@drawable/home"
                    android:background="#ffff"
                    android:scaleType="fitXY"/>
                <ImageButton
                    android:id="@+id/btn_profile"
                    android:layout_marginLeft="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#ffff"
                    android:layout_height="60dp"
                    android:src="@drawable/profile"
                    android:scaleType="fitXY"/>
                <ImageButton
                    android:id="@+id/data"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#ffff"
                    android:layout_height="60dp"
                    android:src="@drawable/isi"
                    android:scaleType="fitXY"/>
            </LinearLayout>
            <LinearLayout
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:weightSum="4"
                android:gravity="center"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginLeft="25dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/home"/>
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/profil"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/isi"/>
            </LinearLayout>
            <!--bawah-->
            <LinearLayout
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/btn_jadwal"
                    android:layout_marginLeft="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#ffff"
                    android:layout_height="60dp"
                    android:src="@drawable/jadwal"
                    android:scaleType="fitXY"/>
                <ImageButton
                    android:id="@+id/btn_nilai"
                    android:layout_marginLeft="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp"
                    android:src="@drawable/nilai"
                    android:background="#ffff"
                    android:scaleType="fitXY"/>
                <ImageButton
                    android:id="@+id/btn_pengumuman"
                    android:layout_marginLeft="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="#ffff"
                    android:layout_height="60dp"
                    android:src="@drawable/umuman"
                    android:scaleType="fitXY"/>

                <ImageButton
                    android:id="@+id/btn_daftarulang"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="#ffff"
                    android:scaleType="fitXY"
                    android:src="@drawable/deal" />


            </LinearLayout>
            <LinearLayout
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:gravity="center"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/jadwal"/>
                <TextView
                    android:layout_marginLeft="25dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/nilai"/>
                <TextView
                    android:layout_marginLeft="0dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/pengumuman"/>
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#95a5a6"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">
                <TextView
                    android:gravity="center"
                    android:text="Alur Pendaftaran"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/point"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>